structured mainpage, styled title and menu components

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
     <!-- MY STUFF -->
     <script src="https://kit.fontawesome.com/16f9b4d21e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./index.css">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
