--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎟</text></svg>">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- MY STUFF -->
     <script src="https://kit.fontawesome.com/16f9b4d21e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./index.css">
     <title>Entertainment Pinned</title>
   </head>
   <body>
+    <!-- This is a React app! To view the source code, check out: https://github.com/sheezaaziz/Entertainment-Pinned -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
